booktime issue, footer alignment, isSlugLink functionality

--- a/static/style/theme.css
+++ b/static/style/theme.css
@@ -1372,7 +1372,7 @@ p {
 }
 
 .footer-bgCol {
-  padding: 0 32px 30px !important;
+  padding: 0 40px 30px !important;
 }
 
 .mobile-brand-button {
